# dyros_mobile

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.xml  pcv_fd.txt  pcv_q.txt  pcv_q_dot.txt  pcv_qd.txt  pcv_taud.txt  pcv_x.txt  pcv_x_dot.txt  pcv_xd.txt  pcv_xd_dot.txt
include/: caster.h  math_type_define.h  mobile_controller.h  vehicle.h  vrep_bridge.h
matlab/: joint_plot.asv  op_plot.asv  op_plot.m
save_data/trans_rot/: debug.txt  pcv_fd.txt  pcv_q.txt  pcv_q_dot.txt  pcv_qd.txt  pcv_taud.txt  pcv_x.txt  pcv_x_dot.txt  pcv_xd.txt  pcv_xd_dot.txt  recording_2021_07_09-16_59-31.avi
save_data/x_negative/: debug.txt  pcv_fd.txt  pcv_q.txt  pcv_q_dot.txt  pcv_taud.txt  pcv_x.txt  pcv_x_dot.txt  pcv_xd.txt  pcv_xd_dot.txt  recording_2021_07_09-16_14-51.avi
save_data/x_positive/: debug.txt  pcv_fd.txt  pcv_q.txt  pcv_q_dot.txt  pcv_qd_dot.txt  pcv_taud.txt  pcv_x.txt  pcv_x_dot.txt  pcv_xd.txt  pcv_xd_dot.txt  recording_2021_07_09-16_07-51.avi
save_data/y_negative/: debug.txt  pcv_fd.txt  pcv_q.txt  pcv_q_dot.txt  pcv_qd.txt  pcv_taud.txt  pcv_x.txt  pcv_x_dot.txt  pcv_xd.txt  pcv_xd_dot.txt  recording_2021_07_09-16_12-52.avi
save_data/y_positive/: debug.txt  pcv_fd.txt  pcv_q.txt  pcv_q_dot.txt  pcv_qd_dot.txt  pcv_taud.txt  pcv_x.txt  pcv_x_dot.txt  pcv_xd.txt  pcv_xd_dot.txt  recording_2021_07_09-16_10-33.avi
scene/: fixed_mobile_1.ttt  only_mobile_1.ttt
src/: caster.cpp  main.cpp  mobile_controller.cpp  vehicle.cpp  vrep_bridge.cpp
